CSS fix for popover on small screen (pull-request #473)

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1261,17 +1261,19 @@ tr td.task-orange,
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.8);
+    overflow: auto;
 }
 
 #popover-content {
-    position: fixed;
+    position: absolute;
     width: 70%;
     margin: 0 0 0 -35%;
     left: 50%;
     top: 5%;
     padding: 15px;
     background: #fff;
-}/* confirmation box */
+}
+/* confirmation box */
 .confirm {
     max-width: 700px;
     font-size: 1.1em;
