--- a/assets/css/popover.css
+++ b/assets/css/popover.css
@@ -6,10 +6,11 @@
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.8);
+    overflow: auto;
 }
 
 #popover-content {
-    position: fixed;
+    position: absolute;
     width: 70%;
     margin: 0 0 0 -35%;
     left: 50%;
